feat: Implementar gestión de uploads con persistencia y seguridad CSRF

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ Thumbs.db
 logs/
 *.log
 
+# Uploads (ignorar archivos subidos pero mantener estructura)
+uploads/*
+!uploads/.gitkeep
+
 # Distribution / packaging
 .Python
 build/
